--- a/pages/index.html
+++ b/pages/index.html
@@ -22,7 +22,7 @@
     
 
     <header>
-        <img src="assets/WhatsApp Image 2022-07-06 at 12.48.14 PM (2).jpeg" width="100%">
+        <img src="" width="100%">
 
     </header>
 
